v1.0.0/modules/schema/pages/class/BidSelfSched.adoc
= `BidSelfSched`
:toclevels: 4


+++Defines self schedule values to be used for specified time intervals.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:BidSelfSched`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]
*** xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]
**** *`BidSelfSched`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
BidSelfSched {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ProductBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



HostControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SubControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AdjacentCASet {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ContractRight {
  style {
    fill: "#fffbef"
    shadow: true
  }
}





RegularTimePoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




BidSelfSched -> ProductBid: ProductBid


BidSelfSched -> HostControlArea: HostControlArea


BidSelfSched -> SubControlArea: SubControlArea


BidSelfSched -> AdjacentCASet: AdjacentCASet


BidSelfSched -> ContractRight: TransmissionContractRight



BidSelfSched -> RegularTimePoint: TimePoints


BidSelfSched -> DiagramObject: DiagramObjects


BidSelfSched -> InstanceSet: InstanceSet


BidSelfSched -> Name: Names


BidSelfSched -> ChangeSetMember: PropertiesCIMDataObject


BidSelfSched -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ProductBid,`ProductBid`>>
| 1
| xref::class/ProductBid.adoc[`ProductBid`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TimePoints,`TimePoints`>>
| 1..*
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]
| +++The regular interval time point data values that define this schedule.+++

| <<AdjacentCASet,`AdjacentCASet`>>
| 0..1
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]
| n/a

| <<HostControlArea,`HostControlArea`>>
| 0..1
| xref::class/HostControlArea.adoc[`HostControlArea`]
| n/a

| <<SubControlArea,`SubControlArea`>>
| 0..1
| xref::class/SubControlArea.adoc[`SubControlArea`]
| n/a

| <<TransmissionContractRight,`TransmissionContractRight`>>
| 0..1
| xref::class/ContractRight.adoc[`ContractRight`]
| n/a

| <<balancingFlag,`balancingFlag`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR is balanced with another self-schedule using the same TR ID.+++

| <<bidType,`bidType`>>
| 0..1
| xref::enumeration/BidTypeRMR.adoc[`BidTypeRMR`]
| +++bidType has two types as the required output of requirements and qualified pre-dispatch.+++

| <<priorityFlag,`priorityFlag`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR has scheduling priority in DAM/RTM.+++

| <<pumpSelfSchedMw,`pumpSelfSchedMw`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Contains the PriceTaker, ExistingTransmissionContract, TransmissionOwnershipRights pumping self schedule quantity. If this value is not null, then the unit is in pumping mode.+++

| <<referenceType,`referenceType`>>
| 0..1
| xref::enumeration/SelfSchedReferenceType.adoc[`SelfSchedReferenceType`]
| +++Indication of which type of self schedule is being referenced.+++

| <<selfSchedMw,`selfSchedMw`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Self scheduled value+++

| <<selfSchedSptResource,`selfSchedSptResource`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Price Taker Export Self Sched Support Resource+++

| <<selfSchedType,`selfSchedType`>>
| 0..1
| xref::enumeration/MarketProductSelfSchedType.adoc[`MarketProductSelfSchedType`]
| +++This attribute is used to specify if a bid includes a self sched bid. If so what self sched type is it. The possible values are shown as follow but not limited to:

'ETC' - Existing transmission contract
'TOR' - Transmission ownership right
'RMR' - Reliability must run
'RGMR' - Regulatory must run
"RMT" - Relaiability must take
"PT" - Price taker
"LPT" - Low price taker
"SP" - Self provision
"RA" - Resource adequacy

This attribute is originally defined in the BidSelfSched class+++

| <<updateType,`updateType`>>
| 0..1
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]
| n/a

| <<wheelingTransactionReference,`wheelingTransactionReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A unique identifier of a wheeling transaction. A wheeling transaction is a balanced Energy exchange among Supply and Demand Resources.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<endTime,`endTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The time for the last time point.  The value can be a time of day, not a specific date.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<startTime,`startTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The time for the first time point.  The value can be a time of day, not a specific date.+++

| <<timeStep,`timeStep`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++The time between each pair of subsequent regular time points in sequence order.+++

| <<value1Multiplier,`value1Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value1.+++

| <<value1Unit,`value1Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value1 units of measure.+++

| <<value2Multiplier,`value2Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value2.+++

| <<value2Unit,`value2Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value2 units of measure.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#AdjacentCASet]
=== `AdjacentCASet`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.AdjacentCASet`
| Cardinality
| 0..1
| Type
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#balancingFlag]
=== `balancingFlag`
+++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR is balanced with another self-schedule using the same TR ID.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.balancingFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#bidType]
=== `bidType`
+++bidType has two types as the required output of requirements and qualified pre-dispatch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.bidType`
| Cardinality
| 0..1
| Type
| xref::enumeration/BidTypeRMR.adoc[`BidTypeRMR`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#endTime]
=== `endTime`
+++The time for the last time point.  The value can be a time of day, not a specific date.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.endTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#HostControlArea]
=== `HostControlArea`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.HostControlArea`
| Cardinality
| 0..1
| Type
| xref::class/HostControlArea.adoc[`HostControlArea`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#priorityFlag]
=== `priorityFlag`
+++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR has scheduling priority in DAM/RTM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.priorityFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#ProductBid]
=== `ProductBid`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.ProductBid`
| Cardinality
| 1
| Type
| xref::class/ProductBid.adoc[`ProductBid`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pumpSelfSchedMw]
=== `pumpSelfSchedMw`
+++Contains the PriceTaker, ExistingTransmissionContract, TransmissionOwnershipRights pumping self schedule quantity. If this value is not null, then the unit is in pumping mode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.pumpSelfSchedMw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#referenceType]
=== `referenceType`
+++Indication of which type of self schedule is being referenced.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.referenceType`
| Cardinality
| 0..1
| Type
| xref::enumeration/SelfSchedReferenceType.adoc[`SelfSchedReferenceType`]


|===

//[discrete]
[#selfSchedMw]
=== `selfSchedMw`
+++Self scheduled value+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedMw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#selfSchedSptResource]
=== `selfSchedSptResource`
+++Price Taker Export Self Sched Support Resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedSptResource`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#selfSchedType]
=== `selfSchedType`
+++This attribute is used to specify if a bid includes a self sched bid. If so what self sched type is it. The possible values are shown as follow but not limited to:

'ETC' - Existing transmission contract
'TOR' - Transmission ownership right
'RMR' - Reliability must run
'RGMR' - Regulatory must run
"RMT" - Relaiability must take
"PT" - Price taker
"LPT" - Low price taker
"SP" - Self provision
"RA" - Resource adequacy

This attribute is originally defined in the BidSelfSched class+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketProductSelfSchedType.adoc[`MarketProductSelfSchedType`]


|===

//[discrete]
[#startTime]
=== `startTime`
+++The time for the first time point.  The value can be a time of day, not a specific date.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#SubControlArea]
=== `SubControlArea`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.SubControlArea`
| Cardinality
| 0..1
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TimePoints]
=== `TimePoints`
+++The regular interval time point data values that define this schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.TimePoints`
| Cardinality
| 1..*
| Type
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#timeStep]
=== `timeStep`
+++The time between each pair of subsequent regular time points in sequence order.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.timeStep`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#TransmissionContractRight]
=== `TransmissionContractRight`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.TransmissionContractRight`
| Cardinality
| 0..1
| Type
| xref::class/ContractRight.adoc[`ContractRight`]


|===

//[discrete]
[#updateType]
=== `updateType`


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.updateType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]


|===

//[discrete]
[#value1Multiplier]
=== `value1Multiplier`
+++Multiplier for value1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value1Unit]
=== `value1Unit`
+++Value1 units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value2Multiplier]
=== `value2Multiplier`
+++Multiplier for value2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value2Unit]
=== `value2Unit`
+++Value2 units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#wheelingTransactionReference]
=== `wheelingTransactionReference`
+++A unique identifier of a wheeling transaction. A wheeling transaction is a balanced Energy exchange among Supply and Demand Resources.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.wheelingTransactionReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


