v1.1.0/modules/schema/pages/class/BidSelfSched.adoc
= `BidSelfSched`
:toclevels: 4


+++Defines self schedule values to be used for specified time intervals.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:BidSelfSched`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]
*** xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]
**** *`BidSelfSched`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AdjacentCASet,`AdjacentCASet`>>
//| [[slots_table.AdjacentCASet]]<<AdjacentCASet,`AdjacentCASet`>>
| 0..1 +
xref::class/AdjacentCASet.adoc[`AdjacentCASet`]
| _n/a_
| _n/a_

| <<HostControlArea,`HostControlArea`>>
//| [[slots_table.HostControlArea]]<<HostControlArea,`HostControlArea`>>
| 0..1 +
xref::class/HostControlArea.adoc[`HostControlArea`]
| _n/a_
| _n/a_

| <<ProductBid,`ProductBid`>>
//| [[slots_table.ProductBid]]<<ProductBid,`ProductBid`>>
| 1 +
xref::class/ProductBid.adoc[`ProductBid`]
| _n/a_
| _n/a_

| <<SubControlArea,`SubControlArea`>>
//| [[slots_table.SubControlArea]]<<SubControlArea,`SubControlArea`>>
| 0..1 +
xref::class/SubControlArea.adoc[`SubControlArea`]
| _n/a_
| _n/a_

| <<TransmissionContractRight,`TransmissionContractRight`>>
//| [[slots_table.TransmissionContractRight]]<<TransmissionContractRight,`TransmissionContractRight`>>
| 0..1 +
xref::class/ContractRight.adoc[`ContractRight`]
| _n/a_
| _n/a_

| <<balancingFlag,`balancingFlag`>>
//| [[slots_table.balancingFlag]]<<balancingFlag,`balancingFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates...+++
| _n/a_

| <<bidType,`bidType`>>
//| [[slots_table.bidType]]<<bidType,`bidType`>>
| 0..1 +
xref::enumeration/BidTypeRMR.adoc[`BidTypeRMR`]
| +++bidType has two types as the required output of requirements and qualified pre-dispatch.+++
| _n/a_

| <<priorityFlag,`priorityFlag`>>
//| [[slots_table.priorityFlag]]<<priorityFlag,`priorityFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates...+++
| _n/a_

| <<pumpSelfSchedMw,`pumpSelfSchedMw`>>
//| [[slots_table.pumpSelfSchedMw]]<<pumpSelfSchedMw,`pumpSelfSchedMw`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Contains the PriceTaker, ExistingTransmissionContract, TransmissionOwnershipRights pumping self schedule quantity. If this...+++
| _n/a_

| <<referenceType,`referenceType`>>
//| [[slots_table.referenceType]]<<referenceType,`referenceType`>>
| 0..1 +
xref::enumeration/SelfSchedReferenceType.adoc[`SelfSchedReferenceType`]
| +++Indication of which type of self schedule is being referenced.+++
| _n/a_

| <<selfSchedMw,`selfSchedMw`>>
//| [[slots_table.selfSchedMw]]<<selfSchedMw,`selfSchedMw`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Self scheduled value+++
| _n/a_

| <<selfSchedSptResource,`selfSchedSptResource`>>
//| [[slots_table.selfSchedSptResource]]<<selfSchedSptResource,`selfSchedSptResource`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Price Taker Export Self Sched Support Resource+++
| _n/a_

| <<selfSchedType,`selfSchedType`>>
//| [[slots_table.selfSchedType]]<<selfSchedType,`selfSchedType`>>
| 0..1 +
xref::enumeration/MarketProductSelfSchedType.adoc[`MarketProductSelfSchedType`]
| +++This attribute is used to specify if a bid includes a self sched bid. If so what self sched type is it. The possible values...+++
| _n/a_

| <<updateType,`updateType`>>
//| [[slots_table.updateType]]<<updateType,`updateType`>>
| 0..1 +
xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]
| _n/a_
| _n/a_

| <<wheelingTransactionReference,`wheelingTransactionReference`>>
//| [[slots_table.wheelingTransactionReference]]<<wheelingTransactionReference,`wheelingTransactionReference`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++A unique identifier of a wheeling transaction. A wheeling transaction is a balanced Energy exchange among Supply and Demand...+++
| _n/a_

| <<TimePoints,`TimePoints`>>
//| [[slots_table.TimePoints]]<<TimePoints,`TimePoints`>>
| 1..* +
xref::class/RegularTimePoint.adoc[`RegularTimePoint`]
| +++The regular interval time point data values that define this schedule.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<endTime,`endTime`>>
//| [[slots_table.endTime]]<<endTime,`endTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The time for the last time point.  The value can be a time of day, not a specific date.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<timeStep,`timeStep`>>
//| [[slots_table.timeStep]]<<timeStep,`timeStep`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++The time between each pair of subsequent regular time points in sequence order.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<startTime,`startTime`>>
//| [[slots_table.startTime]]<<startTime,`startTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The time for the first time point.  The value can be a time of day, not a specific date.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value1Multiplier,`value1Multiplier`>>
//| [[slots_table.value1Multiplier]]<<value1Multiplier,`value1Multiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value1.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value1Unit,`value1Unit`>>
//| [[slots_table.value1Unit]]<<value1Unit,`value1Unit`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value1 units of measure.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value2Multiplier,`value2Multiplier`>>
//| [[slots_table.value2Multiplier]]<<value2Multiplier,`value2Multiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value2.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value2Unit,`value2Unit`>>
//| [[slots_table.value2Unit]]<<value2Unit,`value2Unit`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value2 units of measure.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#AdjacentCASet]
=== `AdjacentCASet`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.AdjacentCASet`
| Cardinality
| 0..1
| Type
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]


|===

////
[.text-left]
--
<<slots_table.AdjacentCASet,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#balancingFlag]
=== `balancingFlag`
+++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR is balanced with another self-schedule using the same TR ID.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.balancingFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.balancingFlag,&#10548;>>
--
////


//[discrete]
[#bidType]
=== `bidType`
+++bidType has two types as the required output of requirements and qualified pre-dispatch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.bidType`
| Cardinality
| 0..1
| Type
| xref::enumeration/BidTypeRMR.adoc[`BidTypeRMR`]


|===

////
[.text-left]
--
<<slots_table.bidType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#endTime]
=== `endTime`
+++The time for the last time point.  The value can be a time of day, not a specific date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.endTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.endTime,&#10548;>>
--
////


//[discrete]
[#HostControlArea]
=== `HostControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.HostControlArea`
| Cardinality
| 0..1
| Type
| xref::class/HostControlArea.adoc[`HostControlArea`]


|===

////
[.text-left]
--
<<slots_table.HostControlArea,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#priorityFlag]
=== `priorityFlag`
+++This is a Y/N flag for a self-schedule of a resource per market per date and hour, using a specific TR ID. It indicates whether a self-schedule using a TR has scheduling priority in DAM/RTM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.priorityFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.priorityFlag,&#10548;>>
--
////


//[discrete]
[#ProductBid]
=== `ProductBid`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.ProductBid`
| Cardinality
| 1
| Type
| xref::class/ProductBid.adoc[`ProductBid`]


|===

////
[.text-left]
--
<<slots_table.ProductBid,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#pumpSelfSchedMw]
=== `pumpSelfSchedMw`
+++Contains the PriceTaker, ExistingTransmissionContract, TransmissionOwnershipRights pumping self schedule quantity. If this value is not null, then the unit is in pumping mode.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.pumpSelfSchedMw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.pumpSelfSchedMw,&#10548;>>
--
////


//[discrete]
[#referenceType]
=== `referenceType`
+++Indication of which type of self schedule is being referenced.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.referenceType`
| Cardinality
| 0..1
| Type
| xref::enumeration/SelfSchedReferenceType.adoc[`SelfSchedReferenceType`]


|===

////
[.text-left]
--
<<slots_table.referenceType,&#10548;>>
--
////


//[discrete]
[#selfSchedMw]
=== `selfSchedMw`
+++Self scheduled value+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedMw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.selfSchedMw,&#10548;>>
--
////


//[discrete]
[#selfSchedSptResource]
=== `selfSchedSptResource`
+++Price Taker Export Self Sched Support Resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedSptResource`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.selfSchedSptResource,&#10548;>>
--
////


//[discrete]
[#selfSchedType]
=== `selfSchedType`
+++This attribute is used to specify if a bid includes a self sched bid. If so what self sched type is it. The possible values are shown as follow but not limited to:

'ETC' - Existing transmission contract
'TOR' - Transmission ownership right
'RMR' - Reliability must run
'RGMR' - Regulatory must run
"RMT" - Relaiability must take
"PT" - Price taker
"LPT" - Low price taker
"SP" - Self provision
"RA" - Resource adequacy

This attribute is originally defined in the BidSelfSched class+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.selfSchedType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketProductSelfSchedType.adoc[`MarketProductSelfSchedType`]


|===

////
[.text-left]
--
<<slots_table.selfSchedType,&#10548;>>
--
////


//[discrete]
[#startTime]
=== `startTime`
+++The time for the first time point.  The value can be a time of day, not a specific date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.startTime,&#10548;>>
--
////


//[discrete]
[#SubControlArea]
=== `SubControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.SubControlArea`
| Cardinality
| 0..1
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]


|===

////
[.text-left]
--
<<slots_table.SubControlArea,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimePoints]
=== `TimePoints`
+++The regular interval time point data values that define this schedule.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.TimePoints`
| Cardinality
| 1..*
| Type
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.TimePoints,&#10548;>>
--
////


//[discrete]
[#timeStep]
=== `timeStep`
+++The time between each pair of subsequent regular time points in sequence order.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.timeStep`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.timeStep,&#10548;>>
--
////


//[discrete]
[#TransmissionContractRight]
=== `TransmissionContractRight`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.TransmissionContractRight`
| Cardinality
| 0..1
| Type
| xref::class/ContractRight.adoc[`ContractRight`]


|===

////
[.text-left]
--
<<slots_table.TransmissionContractRight,&#10548;>>
--
////


//[discrete]
[#updateType]
=== `updateType`



[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.updateType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]


|===

////
[.text-left]
--
<<slots_table.updateType,&#10548;>>
--
////


//[discrete]
[#value1Multiplier]
=== `value1Multiplier`
+++Multiplier for value1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value1Multiplier,&#10548;>>
--
////


//[discrete]
[#value1Unit]
=== `value1Unit`
+++Value1 units of measure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value1Unit,&#10548;>>
--
////


//[discrete]
[#value2Multiplier]
=== `value2Multiplier`
+++Multiplier for value2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value2Multiplier,&#10548;>>
--
////


//[discrete]
[#value2Unit]
=== `value2Unit`
+++Value2 units of measure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value2Unit,&#10548;>>
--
////


//[discrete]
[#wheelingTransactionReference]
=== `wheelingTransactionReference`
+++A unique identifier of a wheeling transaction. A wheeling transaction is a balanced Energy exchange among Supply and Demand Resources.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BidSelfSched.wheelingTransactionReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.wheelingTransactionReference,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AdjacentCASet.adoc[`AdjacentCASet`] | xref::class/AdjacentCASet.adoc#BidSelfSched[`BidSelfSched`]



| xref::class/ContractRight.adoc[`ContractRight`] | xref::class/ContractRight.adoc#BidSelfSched[`BidSelfSched`]



| xref::class/HostControlArea.adoc[`HostControlArea`] | xref::class/HostControlArea.adoc#BidSelfSched[`BidSelfSched`]



| xref::class/ProductBid.adoc[`ProductBid`] | xref::class/ProductBid.adoc#BidSelfSched[`BidSelfSched`]



| xref::class/SubControlArea.adoc[`SubControlArea`] | xref::class/SubControlArea.adoc#BidSelfSched[`BidSelfSched`]


|===

